[package]
name = "silent_hill_randomizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.18.0"
rfd = "0.8.2"
rand = "0.8.5"
vmemory = "0.1.8"
byteorder = "1.4.3"
chrono = "0.4.19"
sysinfo = "0.24.6"